# IA

./: .env  .env.dev.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AJUSTES_APLICADOS.md  ANALISE_INSTAGRAM_MENUS.docx  ANALISE_INSTAGRAM_MENUS.md  ANALISE_INSTAGRAM_RESUMO.md  ANALISE_INSTAGRAM_ROADMAP.md  AUDITORIA_ESCALA_800_TENANTS.docx  AUDITORIA_ESCALA_800_TENANTS.md  AUDITORIA_FLUXO_TRIAGEM.docx  AUDITORIA_FLUXO_TRIAGEM.md  AUDIT_FIXES.md  Analise_Mercado_Fluxo_IA.docx  Auditoria_Fluxo_IA.docx  CACHE_AND_CONFIG.md  DEPLOY_MANUAL.ps1  Dockerfile  MKT_FEATURES.md  Makefile  SETUP_GITHUB_SECRETS.ps1  SYSTEM_ANALYSIS.md  architecture.md  audit_tables.py  check_conversas.py  check_mensagens.py  check_p_schema.py  deploy_faq.bat  deploy_horario.bat  deploy_pausa.bat  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  fix2.bat  main.py  migrate_db.py  (+4 more)
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
alembic/: env.py
alembic/versions/: 3c6b915e866e_initial_revision.py  41c67487b635_remove_cache_respostas_and_add_kpi_.py  5d740eb04415_add_score_lead_to_conversas.py  89e716bfb81f_add_unidade_id_to_integracoes.py  930ec286d50f_add_contato_fone_to_conversas.py  a0b1c2d3e4f5_add_latencia_ms_to_uso_ia.py  a1b2c3d4e5f6_add_convites_table.py  a1b2c3d4e5f6_add_csat_sentiment_followup_filters.py  a1b2c3d4e5f6_mapeamento_label_time.py  audit01_audit_log_and_webhook_secret.py  b2c3d4e5f6g7_add_csat_sentiment_followup_filters.py  c1e2n3a4r5i6_personalidade_cenarios.py  c3d4e5f6g7h8_fix_uso_ia_add_modelo_latencia.py  (+20 more)
docs/: documentacao-tecnica.docx  fluxograma-sistema.html
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
nginx/: dev.conf  prod.conf  staging.conf
scripts/: migrate.sh  pg_backup.sh  pg_restore.sh
tests/: conftest.py  test_bot_core.py  test_flow_executor.py  test_webhook_pipeline.py
(+158 files in other folders)
